<resources>
    <string name="title_activity_cabin_nav">Cabin_nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_Traveler_header_title">Esandha Vithanage</string>
    <string name="nav_Caban_header_title">Kandy cabana</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Logout</string>
    <string name="menu_home">Home</string>
    <string name="travellmenu_request">Comments</string>
    <string name="cabinmenu_rating">Rating</string>
    <string name="cabinmenu_checkOut">Rating</string>
    <string name="menu_History">History</string>
    <string name="menu_prfile">Profile</string>
    <string name="title_activity_traveller_nav">Traveller</string>
    <string name="btnrequest">Send request</string>
    <string name="Addres">Address</string>
    <string name="TP">Telephone Number</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reg">Register</string>
    <string name="reject">Reject</string>
    <string name="confirm">Confirm</string>
    <string name="fromDate">Date</string>
    <string name="toDate">To Date</string>
    <string name="reject1">Reject</string>
    <string name="History">History</string>
    <string name="traveler">Traveler Details</string>
    <string name="TVname">Traveler Name</string>
    <string name="TVtel">Traveler TeleNumber</string>
    <string name="TVNIC">Traveler NIC</string>
    <string name="rate">Rating</string>
    <string name="yourRate">Your Rating </string>
    <string name="currnt">Current Customer</string>
    <string name="Customer1">Customer 1</string>
    <string name="Customer2">Customer 2</string>
    <string name="Customer3">Customer 3</string>
    <string name="check">Check Out</string>
    <string name="req">Request</string>
    <string name="caName">Cabanas Name</string>
    <string name="btnCancle">Cancle Request</string>
    <string name="btnnav"> Navigation </string>
    <string name="app_name">HideoutCabins</string>
    <string name="name">Hotel Name</string>
    <string name="address">Address</string>
    <string name="Eaddress">Email Address</string>
    <string name="password">Password</string>
    <string name="TElnum">Tel Number</string>
    <string name="register">Register</string>
    <string name="roomD">Room Details</string>
    <string name="rdetails1">Number of Single Room : </string>
    <string name="rdetails2">Number of Double Room : </string>
    <string name="Price">Price </string>
    <string name="sub">Submit  </string>
    <string name="Rs"> LKR  </string>
    <string name="discription"> Show your beauty to world....
                                Creativity makes Prefect....          </string>
    <string name="discription2"> (you can only Upload five photos)        </string>
    <string name="up"> Upload  </string>
    <string name="Finish"> Finish </string>
    <string name="Update"> Update </string>
    <string name="Amari"> Amari Galle </string>
    <string name="visit"> Visit Hotel web site </string>
    <string name="next">NEXT </string>

    <string name="longitude">Longitude </string>
    <string name="latitude"> Latitude </string>
    <string name="Next"> Next </string>
    <string name="Edit"> Edit </string>

    <string name="resturent_name">Kandy cabana</string>
    <string name="firstName">First Name</string>
    <string name="lastname">Last name</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="Doublebedprice">Double Bed Price</string>
    <string name="singalbedprice">Singal Bed Price</string>

    <string name="login">Login</string>
    <string name="post">sent</string>

    <string name="TravellerReg">Traveller Registration</string>
    <string name="cabanaReg">Cabana Registration</string>
    <string name="cabaP">Profile Details</string>
    <string name="rateUs">rate us</string>
    <string name="search">search</string>
    <string name="comment">comment</string>
    <string name="NIC">NIC</string>


    <!---->

    <string name="H2">Password</string>
    <string name="Rh3">Email</string>
    <string name="Rh4">NIC</string>
    <string name="Rh5">Password</string>
    <string name="Rh6">Confirm password</string>
    <string name="Rh1">Last name</string>
    <string name="Rh2">Email</string>
    <string name="H1">First name</string>
    <string name="sing_up">Sing up</string>
    <string name="sing_in">Sing in</string>
    <string name="Rh7">Your phone number</string>
    <string name="W1">"   Hideout cabins"</string>
    <string name="Tb1">Traveller Registration</string>
    <string name="Tb2">Cabana Registration</string>
    <string name="Ad">NIC</string>
    <string name="Ed">Delete</string>
    <string name="Up">Update</string>

</resources>
