<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/yuello"
    android:orientation="vertical"
    tools:context=".viewDetails">


    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="27dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center"
        android:text="@string/menu_prfile"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/caName" />

        <EditText
            android:id="@+id/txtname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/caName"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Addres" />

        <EditText
            android:id="@+id/txtadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Addres"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Email" />

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Email"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TP" />

        <EditText
            android:id="@+id/txttp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/TP"
            android:inputType="number|textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/singalbedprice" />

        <EditText
            android:id="@+id/txtsprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/singalbedprice"
            android:inputType="number|textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Doublebedprice" />

        <EditText
            android:id="@+id/txtdprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/Doublebedprice"
            android:inputType="number|textPersonName" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="41dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btndelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/btnupdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Update" />

        <Button
            android:id="@+id/btnedit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Edit" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="83dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <Space
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnfinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Finish" />
    </LinearLayout>
</LinearLayout>