<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FHistoryCabana" >

    <TextView
        android:id="@+id/textView14"
        android:layout_width="398dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"

        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/History"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/fromDate" />

        <EditText
            android:id="@+id/txtsdate_cabana"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="true"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnsearch_cabana"
            android:layout_width="99dp"
            android:layout_height="match_parent"
            android:text="@string/search" />
    </LinearLayout>

    <ListView
        android:id="@+id/requestview_cabana"
        android:scrollbars="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>