<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/txtUname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Email"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        tools:layout_editor_absoluteX="25dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtUname"
        tools:layout_editor_absoluteX="142dp" />

    <TextView
        android:id="@+id/txtPassowrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57"
        tools:layout_editor_absoluteX="25dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="253dp"
        android:layout_height="48dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPassowrd"
        tools:layout_editor_absoluteX="142dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="251dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701"
        tools:layout_editor_absoluteX="144dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="171dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="237dp" />
</androidx.constraintlayout.widget.ConstraintLayout>