<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".cabanaLocation">

    <fragment
        android:id="@+id/locater"
        android:layout_width="match_parent"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_height="452dp"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView36"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/latitude"

            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtlat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/latitude"
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView37"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:layout_weight="1"
            android:text="@string/longitude"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtlon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/longitude"
            android:inputType="textPersonName"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="254dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onclick"
            android:background="@drawable/buttonnext"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>